👽️ [Trakt.tv] implemented API changes for trakt.tv